# Games-Gaming_Engineering_Practices_7_to_11

./: CMakeLists.txt  README.md
Practical_2_Pong/: main.cpp
Practical_3_Space_Invaders/: bullet.cpp  bullet.h  game.h  main.cpp  ship.cpp  ship.h
Practical_4_Tile_Engine/: Entity.cpp  Entity.h  Player.cpp  Player.h  game.h  main.cpp
Practical_5_Pacman/: Entity.cpp  Entity.h  Ghost.cpp  Ghost.h  Pacman.cpp  Pacman.h  Player.cpp  Player.h  Scene.cpp  Scene.h  game.h  main.cpp
Practical_5_Pacman/components/: cmp_actor_movement.cpp  cmp_actor_movement.h  cmp_ghost_movement.cpp  cmp_ghost_movement.h  cmp_pickup.cpp  cmp_pickup.h  cmp_player_movement.cpp  cmp_player_movement.h  cmp_sprite.cpp  cmp_sprite.h
Practical_6_Physics/: main.cpp
Practical_7_Platformer/scenes/: scene_level2.cpp  scene_level3.cpp
lib_ecm/: Renderer.cpp  ecm.cpp  ecm.h
lib_maths/: maths.h
lib_tile_level_loader/: LevelSystem.cpp  LevelSystem.h  LevelSysten.cpp
practical_2/: main.cpp
res/: maze_2.txt
